website/websites/demo2/code/mandelbrot.3.clang.log

Wed, 23 Mar 2011 16:29:33 GMT

MAKE:
/usr/bin/clang -pipe -Wall -O3 -fomit-frame-pointer -march=native -mfpmath=sse -msse2 -fopenmp mandelbrot.clang-3.c -o mandelbrot.clang-3.clang_run
mandelbrot.clang-3.c:61:36: error: use of unknown builtin '__builtin_ia32_cmplepd'
                v2df delta = (v2df)__builtin_ia32_cmplepd( (Trv + Tiv), four);
                                   ^
mandelbrot.clang-3.c:61:30: error: invalid conversion between vector type 'v2df' and integer type 'int' of different size
                v2df delta = (v2df)__builtin_ia32_cmplepd( (Trv + Tiv), four);
                             ^~~~~~
2 errors generated.
make: [mandelbrot.clang-3.clang_run] Error 1 (ignored)
rm mandelbrot.clang-3.c
0.04s to complete and log all make actions

COMMAND LINE:
./mandelbrot.clang-3.clang_run 1000

MAKE ERROR 

